Figures out how to do include files

--- a/Examples/Snake/CMakeLists.txt
+++ b/Examples/Snake/CMakeLists.txt
@@ -9,9 +9,10 @@ set(SRC_DIR_ABSOLUTE ${CMAKE_CURRENT_SOURCE_DIR}/${SRC_DIR_RELATIVE})
 
 # Gather project files
 file(GLOB_RECURSE ASM_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "src/*.asm")
+file(GLOB_RECURSE ASM_INC_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "src/*.inc")
 file(GLOB_RECURSE CPP_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "src/*.cpp")
 file(GLOB_RECURSE H_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "src/*.h")
-list(APPEND SRC_FILES ${ASM_FILES} ${CPP_FILES} ${H_FILES})
+list(APPEND SRC_FILES ${ASM_FILES} ${ASM_INC_FILES} ${CPP_FILES} ${H_FILES})
 
 # Add include directories and files to be compiled in executable
 include_directories(${SRC_DIR_ABSOLUTE})
